[package]
name = "wasm-snake-game"
version = "0.1.0"
authors = ["speretta@protonmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
js-sys = "*"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'console',
  'KeyboardEvent',
  'EventTarget',
  'Crypto'
]
